--- a/socket-draw/public/index.html
+++ b/socket-draw/public/index.html
@@ -17,6 +17,7 @@
             <button id="clearBtn" class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600">
                 クリア
             </button>
+            <button id="downloadBtn" class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600">ダウンロード</button>
             <input type="color" id="colorPicker" value="#000000" class="border p-1 rounded">
             <input type="range" id="sizePicker" min="1" max="20" value="3" class="w-32">
         </div>
